# libjpeg-turbo

./: CMakeLists.txt  CMakeLists_NaoQi.txt  qiproject.xml
simd/: CMakeLists.txt
